--- a/package.json
+++ b/package.json
@@ -6,19 +6,13 @@
   "main": "package.json",
   "scripts": {
     "dev": "workshop dev",
+    "format": "prettier --write --cache --ignore-unknown .",
+    "lint": "eslint . --ext .cjs,.js,.jsx,.mjs,.ts,.tsx --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "@sanity/ui-workshop": "^1.0.1",
-    "@types/node": "^18.11.11",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@types/styled-components": "^5.1.26",
-    "typescript": "^4.9.3"
-  },
   "dependencies": {
     "@sanity/icons": "^2.1.0",
     "@sanity/ui": "^1.0.1",
@@ -26,6 +20,24 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "styled-components": "^5.3.6"
+  },
+  "devDependencies": {
+    "@sanity/ui-workshop": "^1.0.1",
+    "@types/node": "^18.11.11",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "eslint": "^8.29.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-sanity": "^6.0.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.0",
+    "prettier-plugin-packagejson": "^2.3.0",
+    "typescript": "^4.9.3"
   },
   "prettier": {
     "semi": false,
