--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "private": "true",
+  "type": "module",
   "name": "sanity-ui-workshop-starter",
   "version": "1.0.0",
   "description": "",
   "main": "package.json",
   "scripts": {
+    "build": "workshop build",
     "dev": "workshop dev",
     "format": "prettier --write --cache --ignore-unknown .",
     "lint": "eslint . --ext .cjs,.js,.jsx,.mjs,.ts,.tsx --quiet",
@@ -15,29 +17,29 @@
   "license": "MIT",
   "dependencies": {
     "@sanity/icons": "^2.1.0",
-    "@sanity/ui": "^1.0.1",
+    "@sanity/ui": "^1.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "@sanity/ui-workshop": "^1.0.1",
-    "@types/node": "^18.11.11",
+    "@sanity/ui-workshop": "^1.1.1",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
-    "@typescript-eslint/eslint-plugin": "^5.45.1",
-    "@typescript-eslint/parser": "^5.45.1",
-    "eslint": "^8.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-sanity": "^6.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.0",
+    "prettier": "^2.8.1",
     "prettier-plugin-packagejson": "^2.3.0",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.4"
   },
   "prettier": {
     "semi": false,
