--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "private": "true",
-  "type": "module",
   "name": "sanity-ui-workshop-starter",
   "version": "1.0.0",
+  "private": true,
   "description": "",
+  "keywords": [],
+  "license": "MIT",
+  "author": "Sanity.io <hello@sanity.io>",
+  "type": "module",
   "main": "package.json",
   "scripts": {
     "build": "workshop build",
@@ -12,9 +15,6 @@
     "lint": "eslint . --ext .cjs,.js,.jsx,.mjs,.ts,.tsx --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "@sanity/icons": "^2.2.2",
     "@sanity/ui": "^1.0.14",
@@ -40,11 +40,5 @@
     "prettier": "^2.8.3",
     "prettier-plugin-packagejson": "^2.4.0",
     "typescript": "^4.9.4"
-  },
-  "prettier": {
-    "semi": false,
-    "printWidth": 100,
-    "bracketSpacing": false,
-    "singleQuote": true
   }
 }
