--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@sanity/ui-workshop": "^1.2.0",
+    "@sanity/ui-workshop-plugin-sanity": "^1.0.0",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
@@ -39,6 +40,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.8.3",
     "prettier-plugin-packagejson": "^2.4.0",
+    "sanity": "^3.2.3",
+    "sanity-testing-library": "^1.0.0",
     "typescript": "^4.9.4"
   }
 }
